--- a/style.css
+++ b/style.css
@@ -747,3 +747,153 @@ section{
     margin:0 1rem;
     color:var(--white);
 }
+
+
+
+
+/*Recipe Page CSS*/
+.cr-right {
+    position: relative;
+    padding: 50px 50px;
+}
+.cr-right h1 {
+    font-size: 4rem;
+    color: #703a1c;
+
+}
+.cr-right h2 {
+    font-size: 2.2rem;
+    color: #703a1c;
+}
+
+.cr-right p {
+    font-size: 1.4rem;
+    color: var(--black);
+}
+
+.cr-wrapper {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+}
+
+.cr-left {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    max-width: 100%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-pack: start;
+    -webkit-justify-content: flex-start;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
+    -webkit-box-align: start;
+    -webkit-align-items: flex-start;
+    -ms-flex-align: start;
+    align-items: flex-start;
+    
+}
+
+
+/*
+.margin-bottom-24px {
+    margin-bottom: 24px;
+}
+.button-primary{
+    padding: 20px;
+    border-radius: 10px;
+    border-width: 8px;
+  background-color: var(--brown);
+  margin: .3rem;
+  color: #fff;
+  line-height: 50px;
+}
+.button-primary {
+    height:3.5rem;
+    width: 3.5rem;
+    line-height: 2.5rem;
+    border-radius: .5rem;
+    background: #e6d8bf;
+    cursor: pointer;
+    font-size: 1rem;
+    margin-left: .5rem;
+    text-align: center;
+}
+.button-primary {
+    background-color:var(--brown);
+    color: #fff;
+}
+.button-primary:hover {
+    background-color:var(--orange);
+    color: #fff;
+}
+.button-primary:active {
+    background-color: var(--tan);
+}
+
+.br {
+    display: block;
+    margin-bottom: 3em;
+}
+  
+.brmedium {
+    display: block;
+    margin-bottom: 2.5em;
+}
+  
+.brlarge {
+    display: block;
+    margin-bottom: 3em;
+}
+*/
+
+@media screen and (max-width: 991px) {
+.container-recipe {
+     max-width: 728px;
+  } 
+
+  .cr-wrapper{
+     margin-bottom: -40px;
+     -webkit-box-orient: vertical;
+     -webkit-box-direction: normal;
+     -webkit-flex-direction: column;
+     -ms-flex-direction: column;
+     flex-direction: column;
+     -webkit-box-pack: start;
+     -webkit-justify-content: flex-start;
+     -ms-flex-pack: start;
+     justify-content: flex-start;
+     -webkit-box-align: start;
+     -webkit-align-items: flex-start;
+     -ms-flex-align: start;
+     align-items: flex-start;
+  }
+.cr-left {
+     max-width: 100%;
+     margin-bottom: 35px;
+  }
+}
+@media screen and (max-width: 767px) {
+.cr-image-left {
+     padding: 70px 15px;
+  }
+}
+@media screen and (max-width: 479px) {
+.container-recipe {
+     max-width: none;
+  }
+}
